--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "gulp-useref": "^3.1.4"
   },
   "dependencies": {
     "gulp-concat": "^2.6.1"
