--- a/package.json
+++ b/package.json
@@ -18,7 +18,5 @@
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.4"
   },
-  "dependencies": {
-    "gulp-concat": "^2.6.1"
-  }
+  "dependencies": {}
 }
