--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.2.0",
+    "gulp-if": "^2.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-csso": "^3.0.1"
+  }
 }
